# leilao-inteligente

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.claude/commands/: calibrar.md
dashboard/: package-lock.json  package.json
dashboard/src/: App.tsx  index.css  main.tsx
dashboard/src/components/: app-sidebar.tsx  comparacao-camadas.tsx  filtro-bar.tsx  layout.tsx  lote-ao-vivo.tsx  lotes-table.tsx  mercado-indicador.tsx  metricas-cards.tsx  paineis.tsx  taxa-arrematacao.tsx  tendencia-chart.tsx
dashboard/src/hooks/: use-custos.ts  use-filtros.ts
dashboard/src/lib/: api.ts  format.ts  query-provider.tsx
dashboard/src/pages/: analise.tsx  ao-vivo.tsx  comparativo.tsx  config.tsx  dashboard.tsx  leiloes.tsx  mercado.tsx  ranking.tsx
docs/: FLUXO_PROCESSAMENTO.md
docs/plans/: 2026-03-28-4-correcoes.md  2026-04-05-calibracao-claude.md  2026-04-08-ao-vivo.md
scripts/: atualizar_mercado.py  passada4.py  reconsolidar.py  upload_cache_supabase.sh  upload_frames_supabase.sh
src/leilao_inteligente/: __init__.py  api.py  cli.py  config.py
src/leilao_inteligente/market/: __init__.py  cepea_collector.py  collector.py  scraper.py  tendencia.py
src/leilao_inteligente/models/: database.py  schemas.py
src/leilao_inteligente/pipeline/: ao_vivo.py  calibration.py  change_detector.py  cropper.py  downloader.py  frame_extractor.py  merger.py  processor.py  sampler.py  vision.py  (+2 more)
tests/: conftest.py  test_api_frame.py  test_change_detector.py  test_processor.py  test_segundo_video.py  test_validator.py  test_vision_batch.py
(+3 files in other folders)
